--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,15 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+# Docker
+.env
+*.env
+docker-compose.override.yml
+docker-compose.dev.yml
+docker-compose.prod.yml
+**/node_modules
+**/dist
+**/build
+
+mysql_data/
